[SDAN-433] Minor UI improvements to AAP banners and fixing breadcrumb overflow in small-device view
additional changes

--- a/assets/styles/custom-breadcrumb.scss
+++ b/assets/styles/custom-breadcrumb.scss
@@ -29,4 +29,14 @@
 }
 .breadcrumb-item.active {
   color: #9ba4ad;
+
+  @include xsm {
+    text-overflow: ellipsis;
+    overflow:hidden;
+    max-width: 80px;
+  }
+
+  @include sm {
+    overflow: visible;
+  }
 }
